@@ -6,9 +6,9 @@ Gem::Specification.new do |s|
    s.date = %q{2009-04-27}
    s.authors = ["G Modena"]
    s.email = %q{gm@cwi.nl}
-   s.summary = %q{Pure Ruby database driver for monetdb5/sql}
+   s.summary = %q{Pure Ruby database driver for MonetDB/SQL}
    s.homepage = %q{http://monetdb.cwi.nl/}
-   s.description = %q{Pure Ruby database driver for monetdb5/sql}
+   s.description = %q{Pure Ruby database driver for the MonetDB/SQL columnar database management system}
    s.files = ["README", "lib/MonetDB.rb", "lib/MonetDBConnection.rb", "lib/MonetDBData.rb", "lib/MonetDBExceptions.rb", "lib/hasher.rb"]
    s.has_rdoc = true
    s.require_path = './lib'
