@@ -1,6 +1,9 @@
 # ChangeLog file for clients
 # This file is updated with Maddlog
 
+* Mon Feb  7 2011 Fabian Groffen <fabian@cwi.nl>
+- Remove XQuery related code from Ruby adapter
+
 * Thu Feb  3 2011 Fabian Groffen <fabian@cwi.nl>
 - Make SQL the default language for mclient, e.g. to use when --language=
   or -l is omitted
